--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -115,7 +115,7 @@ contact_links = [
   {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/juanlezama"},
 #  {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
 #  {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
-  {icon = "reddit", icon_pack = "fas", name = "Reddit on Forum", link = "https://www.reddit.com/user/juanlezamaoficial"},
+  {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://www.reddit.com/user/juanlezamaoficial"},
 #  # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
   ]
 
