--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -113,10 +113,11 @@ appointment_url = "https://calendly.com/juanlezama"
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
   {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/juanlezama"},
-#  {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
 #  {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
   {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://www.reddit.com/user/juanlezamaoficial"},
-#  # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
+  {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://t.me/juanlezama"},
+#  {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:jalsprimero"},
+  {icon = "question-circle", icon_pack = "fas", name = "FAQ", link = "https://forms.gle/tVt1ed4NyQ3WS9R66"},
   ]
 
 ############################
@@ -153,7 +154,7 @@ main_menu = {align = "l", show_logo = true, highlight_active_link = true, show_l
 reading_time = true
 
 # Display next/previous section pager? (true/false)
-section_pager = false
+section_pager = true
 docs_section_pager = true  # Display pager in Docs layout (e.g. tutorials)?
 
 # Enable in-built social sharing buttons? (true/false)
